fixed canvas sizing on mobile

--- a/src/app/game/components/draw/draw.component.scss
+++ b/src/app/game/components/draw/draw.component.scss
@@ -1,13 +1,39 @@
 .container {
-  background-color: lightskyblue;
   max-width: 100vw;
   height: 100%;
 
   display: flex;
   flex-direction: column;
+
+  position: relative;
+}
+
+canvas {
+  border: 1px solid black;
 }
 
 .actions {
-  background-color: lightgrey;
+  border: 1px solid black;
   flex-grow: 1;
+
+  position: absolute;
+  bottom: 0;
+  min-height: 40px;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr 2fr;
+  gap: 5px;
+}
+
+.undo,
+.clear,
+.color-picker,
+.pen-width {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  max-height: 16px;
 }
